@@ -7,20 +7,14 @@ import java.util.Objects;
 /**
  * Facet filter with selected values (OR within group).
  */
-public class FacetFilter {
-    private final String field;
-    private final List<String> values;
+public record FacetFilter(String field, List<String> values) {
+  public FacetFilter(String field, List<String> values) {
+    this.field = Objects.requireNonNull(field, "field");
+    this.values = values == null ? List.of() : List.copyOf(values);
+  }
 
-    public FacetFilter(String field, List<String> values) {
-        this.field = Objects.requireNonNull(field, "field");
-        this.values = values == null ? List.of() : List.copyOf(values);
-    }
-
-    public String getField() {
-        return field;
-    }
-
-    public List<String> getValues() {
-        return Collections.unmodifiableList(values);
-    }
+  @Override
+  public List<String> values() {
+    return Collections.unmodifiableList(values);
+  }
 }
